--- a/composer.json
+++ b/composer.json
@@ -22,13 +22,13 @@
         "illuminate/contracts": "^5.7",
         "illuminate/database": "^5.7",
         "illuminate/http": "^5.7",
-        "illuminate/support": "^5.7"
+        "illuminate/support": "^5.7",
+        "urameshibr/lumen-form-request": "^1.5"
     },
     "require-dev": {
         "mockery/mockery": "^1.2",
-        "orchestra/testbench": "^3.7",
-        "phpunit/phpunit": ">=5.4.3",
-        "squizlabs/php_codesniffer": "^2.3"
+        "squizlabs/php_codesniffer": "^2.3",
+        "tychovbh/laravel-package-skeleton": "^1.0"
     },
     "autoload": {
         "psr-4": {
@@ -51,6 +51,11 @@
     "extra": {
         "branch-alias": {
             "dev-master": "1.0-dev"
+        },
+        "laravel": {
+            "providers": [
+                "Tychovbh\\Mvc\\MvcServiceProvider"
+            ]
         }
     },
     "config": {
