--- a/composer.json
+++ b/composer.json
@@ -23,11 +23,13 @@
         "illuminate/database": "^5.7",
         "illuminate/http": "^5.7",
         "illuminate/support": "^5.7",
-        "tychovbh/laravel-package-skeleton": "^1.2",
+        "tychovbh/laravel-package-skeleton": "^1.3",
         "urameshibr/lumen-form-request": "^1.5"
     },
     "require-dev": {
         "mockery/mockery": "^1.2",
+        "orchestra/testbench": "^3.8",
+        "phpunit/phpunit": "^8.1",
         "squizlabs/php_codesniffer": "^2.3"
     },
     "autoload": {
