--- a/composer.json
+++ b/composer.json
@@ -18,13 +18,14 @@
     ],
     "require": {
         "php": "^7.1.3",
-        "tychovbh/laravel-package-skeleton": "^1.3",
-        "urameshibr/lumen-form-request": "^1.5",
         "illuminate/console": "~5.6.0|~5.7.0|~5.8.0|~5.9.0",
         "illuminate/contracts": "~5.6.0|~5.7.0|~5.8.0|~5.9.0",
         "illuminate/database": "~5.6.0|~5.7.0|~5.8.0|~5.9.0",
         "illuminate/http": "~5.6.0|~5.7.0|~5.8.0|~5.9.0",
-        "illuminate/support": "~5.6.0|~5.7.0|~5.8.0|~5.9.0"
+        "illuminate/support": "~5.6.0|~5.7.0|~5.8.0|~5.9.0",
+        "laravelista/lumen-vendor-publish": "^2.1",
+        "tychovbh/laravel-package-skeleton": "^1.3",
+        "urameshibr/lumen-form-request": "^1.5"
     },
     "require-dev": {
         "mockery/mockery": "^1.2",
