Add json extension to project + Add Testmethod to test if you can store user from incoming form + Remove fields from TestUser database + Refactor code to reflect these changes + made placeholder field in fields table nullable + made changes to the Resources of Form and Field to return correct values

--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "mockery/mockery": "^1.2",
         "orchestra/testbench": "^3.8",
         "phpunit/phpunit": "^8.1",
-        "squizlabs/php_codesniffer": "^2.3"
+        "squizlabs/php_codesniffer": "^2.3",
+      "ext-json": "*"
     },
     "autoload": {
         "psr-4": {
