--- a/composer.json
+++ b/composer.json
@@ -24,15 +24,16 @@
         "illuminate/http": "~5.6.0|~5.7.0|~5.8.0|~5.9.0",
         "illuminate/support": "~5.6.0|~5.7.0|~5.8.0|~5.9.0",
         "laravelista/lumen-vendor-publish": "^2.1",
+        "rbdwllr/reallysimplejwt": "^2.0",
         "tychovbh/laravel-package-skeleton": "^1.3",
-        "urameshibr/lumen-form-request": "^1.5"
+        "urameshibr/lumen-form-request": "^1.5",
+        "ext-json": "*"
     },
     "require-dev": {
         "mockery/mockery": "^1.2",
         "orchestra/testbench": "^3.8",
         "phpunit/phpunit": "^8.1",
-        "squizlabs/php_codesniffer": "^2.3",
-      "ext-json": "*"
+        "squizlabs/php_codesniffer": "^2.3"
     },
     "autoload": {
         "psr-4": {
