--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,8 @@
     ],
     "require": {
         "php": "^7.1.3",
+        "ext-json": "*",
+        "chelout/offset-pagination": "^1.2",
         "illuminate/console": "~5.6.0|~5.7.0|~5.8.0|~5.9.0",
         "illuminate/contracts": "~5.6.0|~5.7.0|~5.8.0|~5.9.0",
         "illuminate/database": "~5.6.0|~5.7.0|~5.8.0|~5.9.0",
@@ -26,8 +28,7 @@
         "laravelista/lumen-vendor-publish": "^2.1",
         "rbdwllr/reallysimplejwt": "^2.0",
         "tychovbh/laravel-package-skeleton": "^1.3",
-        "urameshibr/lumen-form-request": "^1.5",
-        "ext-json": "*"
+        "urameshibr/lumen-form-request": "^1.5"
     },
     "require-dev": {
         "mockery/mockery": "^1.2",
