--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,16 @@
             "role": "Developer"
         }
     ],
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/tychovbh/laravel-offset-pagination"
+        }
+    ],
     "require": {
         "php": "^7.1.3",
         "ext-json": "*",
-        "chelout/offset-pagination": "^1.2",
+        "chelout/offset-pagination": "dev-master",
         "illuminate/console": "~5.6.0|~5.7.0|~5.8.0|~5.9.0",
         "illuminate/contracts": "~5.6.0|~5.7.0|~5.8.0|~5.9.0",
         "illuminate/database": "~5.6.0|~5.7.0|~5.8.0|~5.9.0",
