--- a/composer.json
+++ b/composer.json
@@ -26,19 +26,19 @@
         "php": "^7.1.3",
         "ext-json": "*",
         "chelout/offset-pagination": "dev-master",
-        "illuminate/console": "^6.0",
-        "illuminate/contracts": "^6.0",
-        "illuminate/database": "^6.0",
-        "illuminate/http": "^6.0",
-        "illuminate/mail": "^6.0",
-        "illuminate/support": "^6.0",
+        "illuminate/console": "~5.6.0|~5.7.0|~5.8.0|~5.9.0",
+        "illuminate/contracts": "~5.6.0|~5.7.0|~5.8.0|~5.9.0",
+        "illuminate/database": "~5.6.0|~5.7.0|~5.8.0|~5.9.0",
+        "illuminate/http": "~5.6.0|~5.7.0|~5.8.0|~5.9.0",
+        "illuminate/support": "~5.6.0|~5.7.0|~5.8.0|~5.9.0",
+        "laravelista/lumen-vendor-publish": "^2.1",
         "rbdwllr/reallysimplejwt": "^2.0",
-        "tychovbh/laravel-package-skeleton": "^1.4",
+        "tychovbh/laravel-package-skeleton": "^1.3",
         "urameshibr/lumen-form-request": "^1.5"
     },
     "require-dev": {
         "mockery/mockery": "^1.2",
-        "orchestra/testbench": "^4.0",
+        "orchestra/testbench": "^3.8",
         "phpunit/phpunit": "^8.1",
         "squizlabs/php_codesniffer": "^2.3"
     },
