--- a/composer.json
+++ b/composer.json
@@ -26,12 +26,12 @@
         "php": "^7.1.3",
         "ext-json": "*",
         "chelout/offset-pagination": "dev-master",
-        "illuminate/console": "~5.6.0|~5.7.0|~5.8.0|~5.9.0",
-        "illuminate/contracts": "~5.6.0|~5.7.0|~5.8.0|~5.9.0",
-        "illuminate/database": "~5.6.0|~5.7.0|~5.8.0|~5.9.0",
-        "illuminate/http": "~5.6.0|~5.7.0|~5.8.0|~5.9.0",
-        "illuminate/support": "~5.6.0|~5.7.0|~5.8.0|~5.9.0",
-        "laravelista/lumen-vendor-publish": "^2.1",
+        "illuminate/console": "~5.6.0|~5.7.0|~5.8.0|~5.9.0|~6.0",
+        "illuminate/contracts": "~5.6.0|~5.7.0|~5.8.0|~5.9.0|~6.0",
+        "illuminate/database": "~5.6.0|~5.7.0|~5.8.0|~5.9.0|~6.0",
+        "illuminate/http": "~5.6.0|~5.7.0|~5.8.0|~5.9.0|~6.0",
+        "illuminate/support": "~5.6.0|~5.7.0|~5.8.0|~5.9.0|~6.0",
+        "illuminate/mail": "~5.6.0|~5.7.0|~5.8.0|~5.9.0|~6.0",
         "rbdwllr/reallysimplejwt": "^2.0",
         "tychovbh/laravel-package-skeleton": "^1.3",
         "urameshibr/lumen-form-request": "^1.5"
