--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,9 @@
     "require": {
         "php": "^7.1.3",
         "ext-json": "*",
+        "altelma/laravel-signrequest": "dev-master",
+        "anam/phantomjs-linux-x86-binary": "^2.1",
+        "anam/phantommagick": "^2.0",
         "chelout/offset-pagination": "dev-master",
         "illuminate/console": "~5.6.0|~5.7.0|~5.8.0|~5.9.0|~6.0",
         "illuminate/contracts": "~5.6.0|~5.7.0|~5.8.0|~5.9.0|~6.0",
@@ -35,8 +38,7 @@
         "mollie/laravel-mollie": "^2.0",
         "rbdwllr/reallysimplejwt": "^2.0",
         "tychovbh/laravel-package-skeleton": "^1.3",
-        "urameshibr/lumen-form-request": "^1.5",
-        "altelma/laravel-signrequest": "dev-master"
+        "urameshibr/lumen-form-request": "^1.5"
     },
     "require-dev": {
         "mockery/mockery": "^1.2",
