--- a/composer.json
+++ b/composer.json
@@ -35,8 +35,7 @@
         "mollie/laravel-mollie": "^2.0",
         "rbdwllr/reallysimplejwt": "^2.0",
         "tychovbh/laravel-package-skeleton": "^1.3",
-        "urameshibr/lumen-form-request": "^1.5",
-        "altelma/laravel-signrequest": "dev-master"
+        "urameshibr/lumen-form-request": "^1.5"
     },
     "require-dev": {
         "mockery/mockery": "^1.2",
