--- a/composer.json
+++ b/composer.json
@@ -28,22 +28,22 @@
         "anam/phantomjs-linux-x86-binary": "^2.1",
         "anam/phantommagick": "^2.0",
         "chelout/offset-pagination": "dev-master",
-        "illuminate/console": "~5.6.0|~5.7.0|~5.8.0|~5.9.0|~6.0",
-        "illuminate/contracts": "~5.6.0|~5.7.0|~5.8.0|~5.9.0|~6.0",
-        "illuminate/database": "~5.6.0|~5.7.0|~5.8.0|~5.9.0|~6.0",
-        "illuminate/http": "~5.6.0|~5.7.0|~5.8.0|~5.9.0|~6.0",
-        "illuminate/mail": "~5.6.0|~5.7.0|~5.8.0|~5.9.0|~6.0",
-        "illuminate/support": "~5.6.0|~5.7.0|~5.8.0|~5.9.0|~6.0",
+        "illuminate/console": "~5.6.0|~5.7.0|~5.8.0|~5.9.0|~6.0|~7.0|~8.0",
+        "illuminate/contracts": "~5.6.0|~5.7.0|~5.8.0|~5.9.0|~6.0|~7.0|~8.0",
+        "illuminate/database": "~5.6.0|~5.7.0|~5.8.0|~5.9.0|~6.0|~7.0|~8.0",
+        "illuminate/http": "~5.6.0|~5.7.0|~5.8.0|~5.9.0|~6.0|~7.0|~8.0",
+        "illuminate/mail": "~5.6.0|~5.7.0|~5.8.0|~5.9.0|~6.0|~7.0|~8.0",
+        "illuminate/support": "~5.6.0|~5.7.0|~5.8.0|~5.9.0|~6.0|~7.0|~8.0",
         "mollie/laravel-mollie": "^2.0",
-        "rbdwllr/reallysimplejwt": "^2.0",
-        "tychovbh/laravel-package-skeleton": "^1.3",
+        "rbdwllr/reallysimplejwt": "^3.1",
         "urameshibr/lumen-form-request": "^1.5"
     },
     "require-dev": {
         "mockery/mockery": "^1.2",
-        "orchestra/testbench": "^3.8",
+        "orchestra/testbench": "4.0",
         "phpunit/phpunit": "^8.1",
-        "squizlabs/php_codesniffer": "^2.3"
+        "squizlabs/php_codesniffer": "^2.3",
+        "tychovbh/laravel-package-skeleton": "^1.5"
     },
     "autoload": {
         "psr-4": {
