--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "anam/phantomjs-linux-x86-binary": "^2.1",
         "anam/phantommagick": "^2.0",
         "chelout/offset-pagination": "dev-master",
+        "guzzlehttp/guzzle": "^6.2",
         "illuminate/console": "~5.6.0|~5.7.0|~5.8.0|~5.9.0|~6.0",
         "illuminate/contracts": "~5.6.0|~5.7.0|~5.8.0|~5.9.0|~6.0",
         "illuminate/database": "~5.6.0|~5.7.0|~5.8.0|~5.9.0|~6.0",
@@ -36,6 +37,7 @@
         "illuminate/support": "~5.6.0|~5.7.0|~5.8.0|~5.9.0|~6.0",
         "mollie/laravel-mollie": "^2.0",
         "rbdwllr/reallysimplejwt": "^2.0",
+        "robwittman/shopify-php-sdk": "^2.4",
         "tychovbh/laravel-package-skeleton": "^1.3",
         "urameshibr/lumen-form-request": "^1.5"
     },
