--- a/composer.json
+++ b/composer.json
@@ -17,30 +17,32 @@
         }
     ],
     "require": {
-        "php": "^7.1.3",
+        "php": "^7.3",
         "ext-json": "*",
         "anam/phantomjs-linux-x86-binary": "^2.1",
         "anam/phantommagick": "^2.0",
-        "illuminate/console": "~5.6.0|~5.7.0|~5.8.0|~5.9.0|~6.0|~7.0|~8.0",
-        "illuminate/contracts": "~5.6.0|~5.7.0|~5.8.0|~5.9.0|~6.0|~7.0|~8.0",
-        "illuminate/database": "~5.6.0|~5.7.0|~5.8.0|~5.9.0|~6.0|~7.0|~8.0",
-        "illuminate/http": "~5.6.0|~5.7.0|~5.8.0|~5.9.0|~6.0|~7.0|~8.0",
-        "illuminate/mail": "~5.6.0|~5.7.0|~5.8.0|~5.9.0|~6.0|~7.0|~8.0",
-        "illuminate/support": "~5.6.0|~5.7.0|~5.8.0|~5.9.0|~6.0|~7.0|~8.0",
+        "doctrine/dbal": "^3.0",
+        "illuminate/console": "^8.0",
+        "illuminate/contracts": "^8.0",
+        "illuminate/database": "^8.0",
+        "illuminate/http": "^8.0",
+        "illuminate/mail": "^8.0",
+        "illuminate/support": "^8.0",
         "mollie/laravel-mollie": "^2.0",
+        "orchestra/testbench": "^6.13",
         "rbdwllr/reallysimplejwt": "^3.1",
         "squizlabs/php_codesniffer": "^3.5",
         "urameshibr/lumen-form-request": "^1.5"
     },
     "require-dev": {
         "mockery/mockery": "^1.4",
-        "orchestra/testbench": "4.0",
-        "phpunit/phpunit": "^8.1",
-        "tychovbh/laravel-package-skeleton": "^1.5"
+        "phpunit/phpunit": "^8.1"
     },
     "autoload": {
         "psr-4": {
-            "Tychovbh\\Mvc\\": "src"
+            "Tychovbh\\Mvc\\": "src",
+            "Database\\Factories\\": "database/factories/",
+            "Database\\Seeders\\": "database/seeders/"
         },
         "files": [
             "src/Helpers/helpers.php"
@@ -48,7 +50,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Tychovbh\\Tests\\Mvc\\": "tests"
+            "Tests\\": "tests/"
         }
     },
     "scripts": {
