--- a/composer.json
+++ b/composer.json
@@ -17,16 +17,16 @@
         }
     ],
     "require": {
-        "php": "^7.1.3|^8.0",
+        "php": "^7.3|^8.0",
         "ext-json": "*",
         "anam/phantomjs-linux-x86-binary": "^2.1",
         "anam/phantommagick": "^2.0",
-        "illuminate/console": "~5.6.0|~5.7.0|~5.8.0|~5.9.0|~6.0|~7.0|~8.0",
-        "illuminate/contracts": "~5.6.0|~5.7.0|~5.8.0|~5.9.0|~6.0|~7.0|~8.0",
-        "illuminate/database": "~5.6.0|~5.7.0|~5.8.0|~5.9.0|~6.0|~7.0|~8.0",
-        "illuminate/http": "~5.6.0|~5.7.0|~5.8.0|~5.9.0|~6.0|~7.0|~8.0",
-        "illuminate/mail": "~5.6.0|~5.7.0|~5.8.0|~5.9.0|~6.0|~7.0|~8.0",
-        "illuminate/support": "~5.6.0|~5.7.0|~5.8.0|~5.9.0|~6.0|~7.0|~8.0",
+        "illuminate/console": "~8.0",
+        "illuminate/contracts": "~8.0",
+        "illuminate/database": "~8.0",
+        "illuminate/http": "~8.0",
+        "illuminate/mail": "~8.0",
+        "illuminate/support": "~8.0",
         "mollie/laravel-mollie": "^2.0",
         "rbdwllr/reallysimplejwt": "^3.1",
         "squizlabs/php_codesniffer": "^3.5",
