--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,6 @@
     "require": {
         "php": "^7.1.3",
         "ext-json": "*",
-        "anam/phantomjs-linux-x86-binary": "^2.1",
-        "anam/phantommagick": "^2.0",
         "chelout/offset-pagination": "dev-master",
         "guzzlehttp/guzzle": "^7.2",
         "illuminate/console": "~5.6.0|~5.7.0|~5.8.0|~5.9.0|~6.0",
@@ -41,6 +39,9 @@
         "urameshibr/lumen-form-request": "^1.5"
     },
     "require-dev": {
+        "anam/phantomjs-linux-x86-binary": "^2.1",
+        "anam/phantommagick": "^2.0",
+        "barryvdh/laravel-dompdf": "^0.9.0",
         "mockery/mockery": "^1.2",
         "orchestra/testbench": "^3.8",
         "phpunit/phpunit": "^8.1",
