--- a/composer.json
+++ b/composer.json
@@ -20,12 +20,12 @@
         "php": "^8.0",
         "ext-json": "*",
         "doctrine/dbal": "^3.0",
-        "illuminate/console": "^8.0",
-        "illuminate/contracts": "^8.0",
-        "illuminate/database": "^8.0",
-        "illuminate/http": "^8.0",
-        "illuminate/mail": "^8.0",
-        "illuminate/support": "^8.0",
+        "illuminate/console": "^8.0|^9.0",
+        "illuminate/contracts": "^8.0|^9.0",
+        "illuminate/database": "^8.0|^9.0",
+        "illuminate/http": "^8.0|^9.0",
+        "illuminate/mail": "^8.0|^9.0",
+        "illuminate/support": "^8.0|^9.0",
         "rbdwllr/reallysimplejwt": "^3.1",
         "squizlabs/php_codesniffer": "^3.5",
         "urameshibr/lumen-form-request": "^1.5"
